Add layout and styled home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,16 @@
+<!--
 {% extends "layout.html" %}
 {% block content %}
     <h2>{{ subtitle }}</h2>
     <p>{{ text }}</p>
 {% endblock content %}
+-->
+{% extends "layout.html" %}
+
+{% block content %}
+  <!--
+  <h1>This is hidden for now</h1>
+  <p>Testing some text</p>
+  -->
+  <h1>hey you got it</h1>
+{% endblock %}
