--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
 </html>
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Chichi's APP{% endblock %}</title>
